tests/jballerina-unit-test/src/test/resources/test-src/error/stacktrace-project/modules/stacktrace/stacktrace.bal
public function getStackTrace() returns error:CallStackElement[] {
    error e = error("error!");
    return e.stackTrace().callStack;
}
